--- a/Depression and suicide psychology.ipynb
+++ b/Depression and suicide psychology.ipynb
@@ -466,8 +466,16 @@
     "import matplotlib.pyplot as plt # for datavisualisation\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "import scipy as sp\n",
-    "!conda install -c plotly plotly=4.9.0 --yes\n",
+    "import scipy as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install plotly\n",
     "import plotly.express as px"
    ]
   },
@@ -485,13 +493,6 @@
     "fig.update_traces(rotation=90, pull=0.05, textinfo=\"percent+label\")\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
