--- a/Depression and suicide psychology.ipynb
+++ b/Depression and suicide psychology.ipynb
@@ -43,7 +43,7 @@
     "Christine Dupré would like to open a new psychologist's office. Specialist in depressive disorders, paranoia and personality disorders, she has the idea of ​​settling somewhere where statistically there is the highest level of suicides in the world.\n",
     "Depression is one of the causes of suicide, she says, if it is properly treated the suicide rate should decrease   \n",
     "\n",
-    "In this project we will try to find an optimal location for the clinic of Mrs Dupre. We will try to detect locations that are not already crowded with clinics. We are also particularly interested in areas with the highest suicide rate. We would also prefer locations as close to city center as possible, assuming that first two conditions are met.\n",
+    "In this project we will try to find an optimal location for the clinic of Mrs Dupre. We will try to detect locations that are near to the Guiliarovsky Psychiatric Clinic. We are also particularly interested in areas with the highest suicide rate. We would also prefer locations as close to city center as possible, assuming that first two conditions are met.\n",
     "\n",
     "We will use our data science powers to generate a few most promissing neighborhoods based on this criteria. Advantages of each area will then be clearly expressed so that best possible final location can be chosen by stakeholders."
    ]
@@ -61,7 +61,7 @@
    "source": [
     "Based on definition of our problem, factors that will influence our decission are:\n",
     "1. suicides rate\n",
-    "2. number of and distance to clinics in the neighborhood, if any\n",
+    "2. near to the Guiliarovsky Psychiatric Clinic\n",
     "3. distance of neighborhood from city center   \n",
     "\n",
     "According to the data in hand, we decided to divide our work into two main parts:    \n",
@@ -438,23 +438,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My dataframe has 101 country and 27820 suicides.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('My dataframe has {} country and {} suicides.'.format(\n",
     "        len(df['country'].unique()),\n",
-    "        df.shape[0]\n",
+    "        df['suicides_no'].sum()\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " df['suicides_no'].sum()"
    ]
   },
   {
@@ -1752,7 +1753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Russian federation** , currently Russia, is the country with the highest suicide rate in the world.   \n",
+    "These are the ten countries with the highest suicide rate in the world. **Russian federation** , currently Russia, is the country with the highest suicide rate in the world.   \n",
     "\n",
     "What makes it, the country of choice for Ms. Dupre for the opening of his new clinic"
    ]
@@ -1768,24 +1769,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting package metadata (current_repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n",
-      "Collecting package metadata (current_repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests # library to handle requests\n",
     "import random # library for random number generation\n",
@@ -1802,7 +1786,6 @@
     "\n",
     "!conda install -c conda-forge folium=0.5.0 --yes\n",
     "import folium # plotting library\n",
-    "! conda update -n base -c defaults conda\n",
     "\n",
     "print('Folium installed')\n",
     "print('Libraries imported.')"
@@ -1836,6 +1819,28 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to define an instance of the geocoder, we need to define a user_agent. We will name our agent Guiliarovsky_Psychiatric_Clinic, as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = 'Ulitsa Matrosskaya Tishina, 20, Moscow, Russie, 107076'\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"Guiliarovsky_Psychiatric_Clinic\")\n",
+    "location = geolocator.geocode(address)\n",
+    "latitude = location.latitude\n",
+    "longitude = location.longitude\n",
+    "print(latitude, longitude)"
+   ]
   },
   {
    "cell_type": "code",
