--- a/Depression and suicide psychology.ipynb
+++ b/Depression and suicide psychology.ipynb
@@ -49,7 +49,8 @@
     "Christine Dupré would like to open a new psychologist's office. Specialist in depressive disorders, paranoia and personality disorders, she has the idea of ​​settling somewhere where statistically there is the highest level of suicides in the world.\n",
     "Depression is one of the causes of suicide, she says, if it is properly treated the suicide rate should decrease   \n",
     "\n",
-    "In this project we will try to find an optimal location for the clinic of Mrs Dupre. We will try to detect locations that are near to the Guiliarovsky Psychiatric Clinic. We are also particularly interested in areas with the highest suicide rate. We would also prefer locations as close to city center as possible, assuming that first two conditions are met.\n",
+    "In this project we will try to find an optimal location for the clinic of Mrs Dupre. We will try to detect locations that are \n",
+    "away from traffic noise, like she asked it. We are also particularly interested in areas with the highest suicide rate. We would also prefer locations as close to city center as possible, assuming that first two conditions are met.\n",
     "\n",
     "We will use our data science powers to generate a few most promissing neighborhoods based on this criteria. Advantages of each area will then be clearly expressed so that best possible final location can be chosen by stakeholders."
    ]
@@ -10880,7 +10881,15 @@
     "1. country with the highest suicides rate   \n",
     ". with highest male aged between 35-54\n",
     "2. as few clinics near as possible\n",
-    "3. distance of neighborhood from city center "
+    "3. away from traffic noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to a research **California** have the highest population over all the states of USA, and Los Angeles have the highest level of popalation in California. \n",
+    "Los Angeles is the second largest city in the United States in terms of population after New York. Located in the southern state of California on the Pacific coast, the city is the seat of Los Angeles County."
    ]
   },
   {
@@ -10944,9 +10953,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your credentails:\n",
+      "CLIENT_ID: maickeryb@gmail.com\n",
+      "CLIENT_SECRET:Maifours7\n"
+     ]
+    }
+   ],
    "source": [
     "CLIENT_ID = 'maickeryb@gmail.com' \n",
     "CLIENT_SECRET = 'Maifours7' \n",
@@ -10958,17 +10977,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to define an instance of the geocoder, we need to define a user_agent. We will name our agent Guiliarovsky_Psychiatric_Clinic, as shown below."
+    "In order to define an instance of the geocoder, we need to define a user_agent. We will name our agent psycho_agent, as shown below."
    ]
   },
   {
@@ -10977,9 +10989,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = 'Ulitsa Matrosskaya Tishina, 20, Moscow, Russie, 107076'\n",
+    "address = ''\n",
     "\n",
-    "geolocator = Nominatim(user_agent=\"Guiliarovsky_Psychiatric_Clinic\")\n",
+    "geolocator = Nominatim(user_agent=\"psycho_agent\")\n",
     "location = geolocator.geocode(address)\n",
     "latitude = location.latitude\n",
     "longitude = location.longitude\n",
@@ -11036,11 +11048,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Sources**   \n",
+    "Worldwidw suicides: https://www.kaggle.com/russellyates88/suicide-rates-overview-1985-to-2016   \n",
+    "\n",
+    "Population of USA:https://fr.wikipedia.org/wiki/%C3%89tats_des_%C3%89tats-Unis_par_population    \n",
+    "\n",
+    "City of California: https://fr.wikipedia.org/wiki/Liste_des_villes_de_Californie_par_population\n",
+    "\n",
+    "Foursquare: "
+   ]
   },
   {
    "cell_type": "markdown",
