--- a/Depression and suicide psychology.ipynb
+++ b/Depression and suicide psychology.ipynb
@@ -19,17 +19,17 @@
    "metadata": {},
    "source": [
     "## Table of contents\n",
-    "* [A. Introduction: Business Problem](#a. introduction: business Problem)\n",
-    "* [B. Worldwide suicides Data](#B. Worldwide suicides Data)\n",
-    "* [B.1 Imported data](#B.1 Imported data)\n",
-    "* [B.2 Exploratory data](#B.2 Exploratory data)\n",
-    "* [B.2.1 Relationship between suicides and country](#B.2.1 Relationship between suicides and country)\n",
-    "* [B.2.2 Relationship between suicides and sex](#B.2.2 Relationship between suicides and sex)\n",
-    "* [B.2.3 Relationship between suicides and generation](#B.2.3 Relationship between suicides and generation)\n",
-    "* [B.2.4 Relationship between suicides and age](#B.2.4 Relationship between suicides and age)\n",
-    "* [C. Foursquare Data](#C. Foursquare Data)\n",
-    "* [C.1 Define Foursquare Credentials and Version](#C.1 Define Foursquare Credentials and Version)\n",
-    "* [D. Results and Discussion](#D. results)"
+    "* [A. Introduction: Business Problem](#introduction)\n",
+    "* [B. Worldwide suicides Data](#worldwide_suicides_data)\n",
+    "* [B.1 Imported data](#imported_data)\n",
+    "* [B.2 Exploratory data](#exploratory_data)\n",
+    "* [B.2.1 Relationship between suicides and country](#country)\n",
+    "* [B.2.2 Relationship between suicides and sex](#sex)\n",
+    "* [B.2.3 Relationship between suicides and generation](#generation)\n",
+    "* [B.2.4 Relationship between suicides and age](#age)\n",
+    "* [C. Foursquare Data](#foursquare)\n",
+    "* [C.1 Define Foursquare Credentials and Version](#define)\n",
+    "* [D. Results and Discussion](#results)"
    ]
   },
   {
